<resources>
    <string name="app_name">SyncOnWifi</string>
    <string name="title_activity_settings">Settings</string>
    <string name="account_list_headline">Select the accounts you want the app to control:</string>
    <string name="account_image_description">" account of "</string>
    <string name="service_setting_headline">Step 1: Enable the service</string>
    <string name="service_setting_text">Service enabled</string>
    <string name="account_setting_headline">Step 2: Select your accounts</string>
    <string name="account_settings_button_text">Select Accounts</string>
    <string name="ssid_setting_headline">Step 3: Select WiFi networks</string>
    <string name="ssid_settings_button_text">Select WiFi networks</string>
    <string name="ssid_list_headline">Select the networks in which your accounts should be synchronised automatically:</string>
    <string name="config_save_alert_dialogue">Would you like to save your current synchronisation settings, so they can be restored later?</string>
    <string name="config_save_alert_dialogue_overwrite_notice">Previous backups will be overwritten!</string>
    <string name="config_restore_alert_dialogue">Would you like to restore your synchronisation settings?</string>
    <string name="config_restore_alert_dialogue_no_backup_notice">There are no saved synchronisation settings to restore!</string>
    <string name="config_save_alert_dialogue_tag">Save settings</string>
    <string name="config_restore_alert_dialogue_tag">Restore settings</string>
    <string name="permissions_explanation_dialogue">Please allow the app to access your contacts. This is needed to display a list of your accounts. On most devices, you will find the setting in your settings app under "Privacy".</string>
    <string name="permissions_explanation_dialogue_tag">Permission request</string>
    <string name="alert_dialogue_understood">I understand</string>
    <string name="alert_dialogue_yes">Yes</string>
    <string name="alert_dialogue_no">No</string>
    <string name="alert_wifi_is_disabled">WiFi is turned off. Enable it to select your networks.</string>
    <string name="time_setting_headline">(Optional:) Choose a time interval in which synchronisation should be enabled:</string>
    <string name="time_settings_button_text">Set time</string>
    <string name="time_activity_headline">Select a time when to enable synchronisation, and a time when to disable it. Only affects accounts that have been selected previously.</string>
    <string name="time_start_headline">Start</string>
    <string name="time_end_headline">End</string>
    <string name="time_consistency_error">End time earlier than start time! Please try again.</string>
    <string name="time_enable_check_text">Enable time-based control</string>
    <string name="time_inactive_time_header">In the time between End and Start:</string>
    <string name="time_inactive_enabled_radio">Enable synchronisation for selected accounts</string>
    <string name="time_inactive_noswitch_radio">Just stop control by this App</string>
    <string name="time_inactive_disabled_radio">Disable synchronisation for selected accounts</string>
</resources>
