<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.t2.synconwifi.TimeActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <CheckBox
                    android:id="@+id/timeEnabledCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v4.widget.Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/timeEnabledCheckboxTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_enable_check_text"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:id="@+id/timeSelectionTextView"
                android:text="@string/time_activity_headline"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp" >
                <TextView
                    android:id="@+id/timeStartHeadline"
                    android:text="@string/time_start_headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/timeStartSpinnerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="test"
                    android:textAlignment="center"
                    style="?android:attr/spinnerStyle"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp">
                <TextView
                    android:id="@+id/timeEndHeadline"
                    android:text="@string/time_end_headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/timeEndSpinnerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="test"
                    android:textAlignment="center"
                    style="?android:attr/spinnerStyle"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp">
                <TextView
                    android:id="@+id/inactiveTimeHeader"
                    android:text="@string/time_inactive_time_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="6dp" />
                <RadioGroup
                    android:id="@+id/inactiveTimeRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/inactiveTimeEnabledRadioButton"
                        android:text="@string/time_inactive_enabled_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="0"/>
                    <RadioButton
                        android:id="@+id/inactiveTimeDisabledRadioButton"
                        android:text="@string/time_inactive_disabled_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="1"/>
                    <RadioButton
                        android:id="@+id/inactiveTimeNoswitchRadioButton"
                        android:text="@string/time_inactive_noswitch_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="2"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
